--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,11 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": ["next/core-web-vitals", "eslint:recommended"],
+  "rules": {
+    "semi": "error",
+    "indent": ["error", "tab"],
+    "no-trailing-spaces": "error",
+    "space-before-blocks": "error",
+    "space-infix-ops": "error",
+    "keyword-spacing": ["error", { "before": true, "after": true }]
+  }
 }
