imports react for build

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,8 @@
 {
   "extends": ["next/core-web-vitals", "eslint:recommended"],
   "rules": {
+    "react/jsx-uses-react": "off",
+    "react/react-in-jsx-scope": "off",
     "semi": "error",
     "indent": ["error", "tab"],
     "no-trailing-spaces": "error",
