--- a/package.json
+++ b/package.json
@@ -10,16 +10,22 @@
     "lint:fix": "eslint --ext .tsx --fix"
   },
   "dependencies": {
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.38.0",
+    "next": "14.1.3",
+    "next-sanity": "^7.1.4",
+    "normalize.css": "^8.0.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.3"
+    "sanity": "^3.38.0",
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.1.3"
+    "eslint-config-next": "14.1.3",
+    "typescript": "^5"
   }
 }
